--- a/product.html
+++ b/product.html
@@ -18,7 +18,7 @@
     <header>
         <nav class="nav">
             <ul class="logo-container">
-                <li><img src="asets/logo.svg" alt=""></li>
+                <li><img src="asets/logo.svg" alt="Logo"></li>
             </ul>
             <ul class="nav_list">
                 <li><a class="nav_links" href="/index.html">Home</a></li>
@@ -26,9 +26,12 @@
                 <li><a class="nav_links" href="/testimonial.html">Testimonial</a></li>
                 <li><a class="nav_links" href="/aboutUs.html">About</a></li>
             </ul>
-            <a href="register.html" class="button beforeLogin-button">
-                <img src="asets/akunLoggedIn.svg" alt="Avatar">
-            </a>
+            <div class="beforeLogin-container">
+                <a href="register.html" class="button beforeLogin-button">
+                    <img src="asets/akunLoggedIn.svg" alt="Avatar">
+                </a>
+                <img class="burger-nav" id="hamburger-menu" src="asets/hamburger-menu.svg" alt="Hamburger Menu">
+            </div>
         </nav>
     </header>
     
@@ -165,10 +168,6 @@
             <img class="whatsapp" src="asets/whatsapp.svg" alt="WhatsApp">
         </div>
     </footer>
-        
-
-
-
     <script src="home.js"></script>
 </body>
 </html>
